package com.github.ui;

public class DungeonCampaignView implements View {
    @Override
    public void display() {
        System.out.println("Rendering Dungeon Campaign Screen UI...");
    }
}
