package com.github.ui;

/**
 * The View interface defines the contract for all UI screens in the application.
 * Each view must implement the display method to render its content.
 */
public interface View {
    /**
     * Displays the view to the user.
     */
    void display();
}
